--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,20 +1,34 @@
 @import 'variables.scss';
 
+
+@font-face {
+    font-family: 'Montserrat-Bold'; // Name you want to use in CSS
+    src: url('../assets/fonts/CourierPrime-Regular.ttf') format('ttf'), 
+}
+@font-face {
+    font-family: 'InriaSans-Regular'; // Name you want to use in CSS
+    src: url('../assets/fonts/CourierPrime-Regular.ttf') format('ttf'), 
+}
+
 body, html {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: 'InriaSans-Regular', sans-serif;
     background-color: $secondary-color;
     scroll-behavior: smooth;
 }
 
-h1 {
+h1, h2 {
     color: $accent-color;
     margin-left: 24px;
     font-size: 36px;
+    font-family: 'Montserrat-Bold';
 }
 
-
+p {
+    font-family: 'InriaSans-Regular';
+    font-size: 18px;
+}
 
 .custom-btn {
     box-shadow:inset 0px 34px 0px -15px $primary-color;
@@ -305,10 +319,6 @@ h1 {
                     font-size: 24px;
                 }
             }
-            // .last-name {
-            //     color: $primary-color;
-            //     margin: 0 auto; 
-            // }
         }
     }
 }
@@ -367,10 +377,10 @@ h1 {
     position: relative;
 
     .paragraphs {
-        display: flex;
-        gap: 5%;
+        // display: flex;
+        // gap: 5%;
         p {
-            line-height: 1.6em;
+            line-height: 1.7em;
             z-index: 1;
         }
     }
@@ -540,12 +550,14 @@ h1 {
                 color: #fff;
                 border-bottom: 2px solid $primary-color;
                 padding-bottom: 10px;
+                padding-left: 20px;
             }
             p, li {
-                font-size: 1rem;
+                font-size: 18px;
                 color: #fff;
             }
-            ul {
+
+            p, h3 {
                 padding-left: 20px;
             }
         }
@@ -558,7 +570,7 @@ h1 {
         }
 
         .experience h3, .education h3 {
-            font-size: 1.4rem;
+            font-size: 20px;
             color: $accent-color;
         }
 
@@ -611,7 +623,7 @@ h1 {
         
         h2 {
             text-align: center;
-            font-size: 24px;
+            font-size: 32px;
             margin-top: 45px;
             color: white;
             font-style: bold;
@@ -630,6 +642,7 @@ h1 {
         }
         
         p {
+            text-align: center;
             a {
                 color: #f2f980;
             }
